# hanakotoba

./: .gitignore  README.md  analyses.py  dates.py  hanakotoba_env.txt  hanakotoba_env.yml  nlp.py  pyproject.toml  report.md  report.py  scrape.py  tagging.py
data/: 元年.csv  分類番号.csv  時代.csv
outputs/: gannen.csv  genres.csv  hk_df.csv  jidai.csv
