[project]
name = "hanakotoba"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.9"
dependencies = [
    "altair>=5.4.1",
    "astropy>=5.3.2",
    "beautifulsoup4>=4.12.3",
    "datapane>=0.17.0",
    "numpy>=1.26.4",
    "pandas>=1.5.3",
    "pykakasi>=2.3.0",
    "python-dateutil>=2.9.0.post0",
    "requests>=2.32.3",
    "scipy>=1.13.1",
    "sudachipy>=0.6.8",
]
